--- a/style.css
+++ b/style.css
@@ -142,9 +142,8 @@
     }
 }
 
-@media (max-height: 780px) {
+@media (max-width: 393px) {
     .line {
-        height: 200px;
+        height: 190px;
     }
-   
 }
